# pipeBB

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
doc/examples/: channel.cc  make_accumulator.cc  make_approximate.cc  make_buffer.cc
include/: accumulator.h  approximate.h  buffer.h  channel.h  counter.h  factor.h  gradient.h  inverter.h  logical.h  moving_average.h  offset.h  pass_through.h  resetter.h  ringbuffer.h  threshold.h  utils.h
tests/: CMakeLists.txt  accumulator.cc  approximate.cc  buffer.cc  channel.cc  combined.cc  counter.cc  factor.cc  gradient.cc  inverter.cc  logical.cc  main.cc  moving_average.cc  offset.cc  pass_through.cc  resetter.cc  ringbuffer.cc  threshold.cc
